--- a/index.html
+++ b/index.html
@@ -14,13 +14,25 @@
 <body>
     <section>
     <div class="container">
-        <center><img class="logo" src="img/send and receive.svg" alt="Send and receive">
+        <center><img class="logo" src="img/send and receive.svg" alt="Send and receive"/>
         <h2><b class="share">Share</b> <b class="money">Money</b></h2>
         <h3><b>Login</b></h3>
-        <p class="login_para">Enter your login info to sign in your account</p>  
-      </center>
+        <p class="login_para">Enter your login info to sign in <br>your account</p>  
+        <form class="col-sm-12 " action="" method="POST">
+          <div class="form-group">
+            <input style="font-family:roboto;"type="text" name="Email" placeholder="Enter your email" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <input style="font-family:roboto;"type="password" name="password" placeholder="Password" class="form-control" required>
+          </div>
+        </form></center>
+        <a class="col-sm-12 forget_pass" href="#" target="">forget your password?</a>        
+        <div class="col-sm-12 form-group button ">
+          <center><button type="button" class="btn Login" value="login"><b>Login</b></button></center>
         </div> 
-    </div>
+        
+        <center><p class="create_new">Don't have an account?<a class="col-sm-12" href="#" target="">Create New</a></p></center>
+    </div> 
     </section>
 </body>
 </html>
