--- a/html/choose.html
+++ b/html/choose.html
@@ -25,7 +25,7 @@
       </div>
       <div class="row receive">
         <div class="col-sm-6 receivelogo">
-          <img class="" src="../img/revice.svg" alt="Send and receive"/>
+          <img class="" src="../img/receive.svg" alt="Send and receive"/>
         </div>
         <div class="col-sm-6 receivelogo">
           <a href="#">Money</a>
