some changes completed

--- a/html/choose.html
+++ b/html/choose.html
@@ -23,7 +23,7 @@
           <img class="" src="../img/send.svg" alt="Send and receive"/>
         </div>
       </div>
-      <div class="row receive">
+      <div class="row">
         <div class="col-sm-6 receivelogo">
           <img class="" src="../img/receive.svg" alt="Send and receive"/>
         </div>
