new screens added

--- a/html/Sendrequest.html
+++ b/html/Sendrequest.html
@@ -16,12 +16,10 @@
       <div class="container drop_shadow">
         <div class="row">
           
-          <div class="col-sm-6 Sendlogo">
+          <div class="col-sm-12 Sendlogo_one">
             <a href="#">Send</a>
+            <img src="../img/send.svg" alt="Send and receive"/>
           </div>
-          <div class="col-sm-6 Sendlogo">
-            <img class="" src="../img/send.svg" alt="Send and receive"/>
-          </div> 
         </div>
         <center><h3 style="margin:0 0 20px 0"><b>Recent</b></h3></center>
       </div>         
@@ -32,7 +30,7 @@
         </div>
         <div class="row">
           <div class="col-sm-4">
-            <a class="request_a" href="#">
+            <a class="request_a" href="#" >
               <i class=" icons fas fa-plus-circle" style="color:#707070;"></i>
               <h6 style="color:#707070;">New</h6>  
             </a>  
