--- a/html/choose.html
+++ b/html/choose.html
@@ -16,18 +16,14 @@
     <div class="container">
       <div class="row">
         
-        <div class="col-sm-6 Sendlogo">
+        <div class="col-sm-12 Sendlogo_one">
           <a href="#">Send</a>
-        </div>
-        <div class="col-sm-6 Sendlogo">
-          <img class="" src="../img/send.svg" alt="Send and receive"/>
+          <img src="../img/send.svg" alt="Send and receive"/>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6 receivelogo">
+        <div class="col-sm-12 receivelogo">
           <img class="" src="../img/receive.svg" alt="Send and receive"/>
-        </div>
-        <div class="col-sm-6 receivelogo">
           <a href="#">Money</a>
         </div>
         
