--- a/html/Sendrequest.html
+++ b/html/Sendrequest.html
@@ -25,69 +25,90 @@
       </div>         
       <div class=" container contact ">
         <div class="col-sm-12" style="margin:15px 0;">
-          <a class="request_a" href="#"> <center><i class="fas fa-user-circle icon" style="color:#707070;"></i>
+          <a class="request_a" href="Send Money.html"> <center><i class="fas fa-user-circle icon" style="color:#707070;"></i>
           <h4 style="color:#707070;">Harry <br>+91 556925102</br></h4></center></a>
         </div>
         <div class="row">
-          <div class="col-sm-4">
-            <a class="request_a" href="#" >
+          <div class="col">
+            <a class="request_a" href="Send Money.html" >
               <i class=" icons fas fa-plus-circle" style="color:#707070;"></i>
               <h6 style="color:#707070;">New</h6>  
             </a>  
           </div>
           
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Send Money.html">
               <i class="fas fa-user-circle icons" style="color:#707070;"></i>
               <h6 style="color:#707070;">John</h6>
           
             </a>
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Send Money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Maria</h6>
             </a>
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Request money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Axel</h6>
             </a>  
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Request money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Axel</h6>
             </a>  
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Request money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Axel</h6>
             </a>  
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Request money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Axel</h6>
             </a>  
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Request money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Axel</h6>
             </a>  
           </div>
 
-          <div class="col-sm-4">
-            <a class="request_a" href="#">
+          <div class="col">
+            <a class="request_a" href="Request money.html">
+            <i class="fas fa-user-circle icons" style="color:#707070;"></i>
+            <h6 style="color:#707070;">Axel</h6>
+            </a>  
+          </div>
+
+          <div class="col">
+            <a class="request_a" href="Request money.html">
+            <i class="fas fa-user-circle icons" style="color:#707070;"></i>
+            <h6 style="color:#707070;">Axel</h6>
+            </a>  
+          </div>
+
+          <div class="col">
+            <a class="request_a" href="Request money.html">
+            <i class="fas fa-user-circle icons" style="color:#707070;"></i>
+            <h6 style="color:#707070;">Axel</h6>
+            </a>  
+          </div>
+
+          <div class="col">
+            <a class="request_a" href="Request money.html">
             <i class="fas fa-user-circle icons" style="color:#707070;"></i>
             <h6 style="color:#707070;">Axel</h6>
             </a>  
