--- a/html/Tutorial.html
+++ b/html/Tutorial.html
@@ -15,23 +15,25 @@
     <section>
     <div class="container">
         <center><img class="logo" src="../img/send and receive.svg" alt="Send and receive"/>
-        <h3><b>Send Money Instantly</b></h3>
         <div class="carousel">
           <div class="carousel_track-container">
             <ul class="carousel__track">
               <li class="carousel__slide current-slide" >
+                <h3><b>Send Money Instantly</b></h3>
                 <img class="money" src="../img/4404.svg">
                 <img class="send" src="../img/send.svg">    
                 <p style="color:#707070">A fast and simple way to send money Just like 1 2 3 & sent</p>
               </li>
               
               <li class="carousel__slide">
+                <h3><b>Receive Money Instantly</b></h3>
                 <img class="money" src="../img/4404.svg">
                 <img class="receive" src="../img/receive.svg">
                 <p style="color:#707070">Request money to your friends, they will get instant notification. One tap and you get your money</p>
               </li>
 
               <li class="carousel__slide">
+                <h3><b>See transection History anytime on the go</b></h3>
                 <img class="money" src="../img/4404.svg">
                 <img class="send_receive" src="../img/send and receive.svg">
                 <p style="color:#707070">Request money to your friends, they will get instant notification. One tap and you get your money</p>
@@ -45,7 +47,7 @@
             <button class="carousel__indicator"></button>
           </div>
         </div>
-        <center><a class="col-sm-12 Skip" href="#" target="">Skip</a></p></center>
+        <center><a class="col-sm-12 Skip" href="choose.html" target="">Skip</a></p></center>
 
     </div> 
     </section>
