--- a/html/Welcome.html
+++ b/html/Welcome.html
@@ -23,10 +23,10 @@
           </div>
         </form></center>        
         <div class="col-sm-12 form-group button ">
-          <center><button type="button" class="btn Start_Tutorial" value="Start Tutorial"><b>Start Tutorial</b></button></center>
+          <center><a href="Tutorial.html"><button type="button" class="btn Start_Tutorial" value="Start Tutorial"><b>Start Tutorial</b></button></a></center>
         </div> 
         
-        <center><a class="col-sm-12 Skip" href="#" target="">Skip</a></p></center>
+        <center><a class="col-sm-12 Skip" href="choose.html" target="">Skip</a></p></center>
     </div> 
     </section>
 </body>
