--- a/html/choose.html
+++ b/html/choose.html
@@ -14,17 +14,17 @@
 <body>
     <section>
     <div class="container">
-      <div class="row">
+      <div class="row Sendlogo_one-row">
         
         <div class="col-sm-12 Sendlogo_one">
-          <a href="#">Send</a>
-          <img src="../img/send.svg" alt="Send and receive"/>
+          <a href="Sendrequest.html">Send</a>
+          <a href="Sendrequest.html"><img src="../img/send.svg" alt="Send and receive"/></a>
         </div>
       </div>
-      <div class="row">
+      <div class="row receive_one-row">
         <div class="col-sm-12 receivelogo">
-          <img class="" src="../img/receive.svg" alt="Send and receive"/>
-          <a href="#">Money</a>
+          <a href="Sendrequest.html"><img class="" src="../img/receive.svg" alt="Send and receive"/>
+          <a href="Sendrequest.html">Money</a></a>
         </div>
         
       </div>         
