--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <center><button type="button" class="btn Login" value="login"><b>Login</b></button></center>
           </div> 
           
-          <center><p class="create_new">Don't have an account?<a class="col-sm-12" href="#" target="">Create New</a></p></center>
+          <center><p class="create_new">Don't have an account?<a class="col-sm-12" href="html/createaccount.html">Create New</a></p></center>
       
           </div>
       </div> 
