--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           </form></center>
           <a class="col-sm-12 forget_pass" href="#" target="">forget your password?</a>        
           <div class="col-sm-12 form-group button ">
-            <center><button type="button" class="btn Login" value="login"><b>Login</b></button></center>
+            <center>
+            <a href="html/Welcome.html">
+              <button type="button" class="btn Login" value="login"><b>Login</b></button></a>  
+            </center>
           </div> 
           
           <center><p class="create_new">Don't have an account?<a class="col-sm-12" href="html/createaccount.html">Create New</a></p></center>
